--- a/package.json
+++ b/package.json
@@ -44,6 +44,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^5.1.0",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "json-server": "^0.16.3",
     "typescript": "^4.2.3"
   }
